--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "NODE_ENV=dev webpack -d --watch",
-    "prod": "NODE_ENV=prod webpack -p"
+    "dev": "NODE_ENV=development webpack -d --watch",
+    "prod": "NODE_ENV=production webpack -p"
   },
   "repository": "github:NicholasRoge/envsettings-editor",
   "author": {
@@ -19,22 +19,27 @@
   },
   "homepage": "https://github.com/NicholasRoge/envsettings-editor#readme",
   "dependencies": {
+    "csv-parse": "^2.0.4",
     "electron": "^1.8.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
+    "electron-devtools-installer": "^2.2.3",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
