--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "NODE_ENV=development webpack -d --watch",
+    "dev": "NODE_ENV=development webpack-dev-server",
     "prod": "NODE_ENV=production webpack -p"
   },
   "repository": "github:NicholasRoge/envsettings-editor",
@@ -43,8 +43,10 @@
     "css-loader": "^0.28.9",
     "electron-devtools-installer": "^2.2.3",
     "node-sass": "^4.7.2",
+    "run-electron-webpack-plugin": "^0.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
-    "webpack": "^3.11.0"
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
