--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "NODE_ENV=development webpack-dev-server --hot",
+    "dev": "NODE_ENV=development webpack -d --watch",
     "prod": "NODE_ENV=production webpack -p"
   },
   "repository": "github:NicholasRoge/envsettings-editor",
@@ -43,7 +43,9 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
     "electron-devtools-installer": "^2.2.3",
+    "file-loader": "^1.1.10",
     "node-sass": "^4.7.2",
+    "react-hot-loader": "^3.1.3",
     "run-electron-webpack-plugin": "^0.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
