--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "material-design-icons": "^3.0.1",
     "material-ui": "^1.0.0-beta.39",
     "normalize.css": "^8.0.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -32,6 +33,7 @@
     "react-router-dom": "^4.2.2",
     "react-select": "^1.2.1",
     "redux": "^3.7.2",
+    "redux-orm": "^0.9.4",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1"
   },
